--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,3 +1,7 @@
 # https://www.playframework.com/documentation/latest/Configuration
 play.i18n.langs = [ "en" ]
 output.folder = /tmp
+
+play.http.parser.maxDiskBuffer=100MB
+
+parsers.anyContent.maxLength=100MB
