Showing constraints in form input and checking whether valid video file or not

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -5,3 +5,9 @@ output.folder = /tmp
 play.http.parser.maxDiskBuffer=100MB
 
 parsers.anyContent.maxLength=100MB
+
+trailer.duration.min=5000
+trailer.duration.max=30000
+
+trailer.cutlength.min=1000
+trailer.cutlength.max=5000
