Cron job for auto deletion of created trailers

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -3,6 +3,7 @@ play.i18n.langs = [ "en" ]
 output.folder = /tmp
 
 play.http.parser.maxDiskBuffer=100MB
+play.modules.enabled += "tasks.TasksModule"
 
 parsers.anyContent.maxLength=100MB
 
@@ -11,3 +12,5 @@ trailer.duration.max=30000
 
 trailer.cutlength.min=1000
 trailer.cutlength.max=5000
+
+trailer.available.for=15
