--- a/.gitignore
+++ b/.gitignore
@@ -70,5 +70,7 @@ fabric.properties
 
 .idea/
 
-public/deps
+public/deps/node_modules
+
+public/binaries
 # End of https://www.gitignore.io/api/intellij+all
