--- a/conf/application.conf
+++ b/conf/application.conf
@@ -14,3 +14,23 @@ trailer.cutlength.min=1000
 trailer.cutlength.max=5000
 
 trailer.available.for=5
+
+play.filters.enabled=[]
+play.filters.enabled += "play.filters.gzip.GzipFilter"
+#play.filters.enabled += "play.filters.csrf.CSRFFilter"
+#play.filters.enabled += "play.filters.headers.SecurityHeadersFilter"
+play.filters.enabled += "play.filters.hosts.AllowedHostsFilter"
+
+play.filters.hosts {
+  # Allow requests to example.com, its subdomains, and localhost:9000.
+  allowed = [".googletagmanager.com", ".bootstrapcdn.com", "localhost:9000"]
+}
+
+play.filters.cors {
+  pathPrefixes = ["/"]
+  allowedOrigins = [".googletagmanager.com", ".bootstrapcdn.com", "localhost:9000"]
+  allowedHttpMethods = ["GET", "POST"]
+  allowedHttpHeaders = ["Accept"]
+  preflightMaxAge = 3 days
+}
+
