Add trailermaker.io to allowed hosts

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -23,12 +23,12 @@ play.filters.enabled += "play.filters.hosts.AllowedHostsFilter"
 
 play.filters.hosts {
   # Allow requests to example.com, its subdomains, and localhost:9000.
-  allowed = [".googletagmanager.com", ".bootstrapcdn.com", "localhost:9000"]
+  allowed = [".googletagmanager.com", ".bootstrapcdn.com", "localhost:9000", ".trailermaker.io"]
 }
 
 play.filters.cors {
   pathPrefixes = ["/"]
-  allowedOrigins = [".googletagmanager.com", ".bootstrapcdn.com", "localhost:9000"]
+  allowedOrigins = [".googletagmanager.com", ".bootstrapcdn.com", "localhost:9000", ".trailermaker.io"]
   allowedHttpMethods = ["GET", "POST"]
   allowedHttpHeaders = ["Accept"]
   preflightMaxAge = 3 days
