Changed to trailer-maker core v0.2

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -23,7 +23,7 @@ play.filters.enabled += "play.filters.hosts.AllowedHostsFilter"
 
 play.filters.hosts {
   # Allow requests to example.com, its subdomains, and localhost:9000.
-  allowed = [".googletagmanager.com", ".bootstrapcdn.com", "localhost:9000", ".trailermaker.io"]
+  allowed = [".googletagmanager.com", ".bootstrapcdn.com", "localhost:9000", ".trailermaker.io", "149.ip-51-255-197.eu"]
 }
 
 play.filters.cors {
